fix: css variable and converted gap to rem

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -66,7 +66,7 @@
   outline: none;
   font-size: 1rem;
   padding-left: 2px;
-  color: #ffffff;
+  color: var(--text-white);
 }
 
 @media screen and (max-width: 600px) {
