--- a/src/index.css
+++ b/src/index.css
@@ -118,7 +118,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: 2rem 0;
-  gap: 40px 20px;
+  gap: 2.5rem 1.25rem;
 }
 
 .cart-container {
@@ -128,7 +128,7 @@ body {
 .wishlist-container {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 /* UTILITY CLASSES */
@@ -174,7 +174,7 @@ body {
 }
 
 .gap {
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .grayed-out-text {
@@ -195,13 +195,13 @@ body {
 
   .cart-container {
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
   }
 
   .wishlist-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 1.25rem;
   }
 }
 
